Fix product update feature

--- a/src/app/products/product-update/product-update.component.html
+++ b/src/app/products/product-update/product-update.component.html
@@ -37,7 +37,7 @@
         <span *ngIf="description.hasError('maxlength')">Max 500 characters</span>
      </div>
      <div class="errorMessage">
-         <span *ngIf="insertForm.hasError('descriptionRequiredFromPrice')">Description is required if Price > 100$</span> 
+         <span *ngIf="updateForm.hasError('descriptionRequiredFromPrice')">Description is required if Price > 100$</span> 
       </div>
     <br />
 
